# AMASS-ID

./: .gitignore  CMakeLists.txt  Makefile  README.md  amass_mesh.py  create_par_of_vertex.py  find-contact-node.py  gen_vid.sh  inverse.pl  plot_joint_torque.m
data/: character.bvh  character.json  parent_of_vertex.txt
src/: BVHData.cpp  CharacterViewer.cpp  ComputeCOM.cpp  IOUtil.cpp  IOUtil.h  PyUtil.cpp  PyUtil.h  SimCharacter.cpp  SimCharacter.h  inverse.cpp
src/c_butterworth/: buildInfo.mat  c_butterworth.cpp  c_butterworth.h  c_butterworth_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
tools/: bvh2json.pl
